Docs: README + repo/ publication folder + Obsidian session note
- README.md: Build, deploy, config, features, API, structure
- repo/: Publication Maven guide + publish.sh
- Obsidian: Session 2026-05-04 complete